k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-deployment
  template:
    metadata:
      name: mysql-deployment
      labels:
        app: mysql-deployment
    spec:
      containers:
        - name: mysql-deployment
          image: mysql:latest
          ports:
            - containerPort: 3306
