k8s/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service-emi:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
      restartPolicy: Always
