k8s/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
      nodePort: 30020
